<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="@dimen/padding_xl"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.deuzex.seguros.activities.asegurado.ContactoActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_stk"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="@dimen/marginLayout"
                android:contentDescription="@string/logoSTK"
                android:src="@drawable/logo1" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:textStyle="bold"
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtContactTitle"
                android:textColor="@color/gray"
                android:textSize="@dimen/txt_xxxl" />

            <TextView
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtContactoTel"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_s"
                android:textStyle="bold" />

            <TextView
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtContactoTel1"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_xs" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtContactoVisitanos"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_s"
                android:textStyle="bold" />

            <TextView
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtContactoVisitanos1"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_xs" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtContactoAutogestion"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_s"
                android:textStyle="bold" />

            <TextView
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/txtContactoAutogestion1"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_xs" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/padding_xl"
                android:orientation="vertical">

                <TextView
                    style="@style/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtContactoAutogestion2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_xs" />

                <TextView
                    style="@style/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtContactoAutogestion3"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_xs" />

                <TextView
                    style="@style/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtContactoAutogestion4"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_xs" />

                <TextView
                    style="@style/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txtContactoAutogestion5"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_xs" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>