<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_xl"
    tools:context="com.deuzex.seguros.activities.asegurado.NarracionSiniestro">

    <TextView
        style="@style/txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/narracion_titulo"
        android:textColor="@color/zurich_blue2"
        android:textSize="@dimen/txt_xl" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_xl">

        <TextView
            style="@style/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/narracion_cantidad_caracteres"
            android:textColor="@color/black_stone"
            android:textSize="@dimen/txt_xs" />

        <TextView
            android:id="@+id/txt_narracion_caracteres"
            style="@style/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="4"
            android:text="@string/narracion_et_caracteres"
            android:textColor="@color/black"
            android:textSize="@dimen/txt_xs" />
    </LinearLayout>


    <EditText
        android:id="@+id/et_narracion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/padding_xl"
        android:layout_marginStart="@dimen/padding_xl"
        android:gravity="top|start"
        android:hint="@string/narracion_et"
        android:inputType="textMultiLine"
        android:lines="10"
        android:maxLength="1000"
        android:scrollbars="vertical"
        android:textSize="@dimen/txt_xs" />

    <Button
        android:id="@+id/btn_narracion"
        style="@style/btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_style"
        android:text="@string/naraccion_btn" />

</LinearLayout>
