<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="@dimen/marginLayout"
    android:background="@color/white"
    android:padding="@dimen/padding_l">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/marginLayout"
        android:background="@color/white"
        android:orientation="vertical"
        tools:context="com.deuzex.seguros.activities.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nextFocusDown="@string/etSearch"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logo_stk"
                android:layout_width="match_parent"
                android:layout_height="120dp"
                android:layout_margin="@dimen/marginLayout"
                android:contentDescription="@string/logoSTK"
                android:src="@drawable/logo1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="start|center"
            android:orientation="vertical">

            <TextView
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/padding_xl"
                android:layout_marginTop="@dimen/padding_xl"
                android:text="@string/login"
                android:textColor="@color/black_stone"
                android:textSize="@dimen/txt_xl"
                android:visibility="invisible" />

            <TextView
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/IngreseDNI"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/txt_m" />

            <EditText
                android:id="@+id/DNIUser"
                style="@style/txt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/padding_xl"
                android:inputType="number"
                android:maxLength="8"
                android:textAlignment="center"
                android:textSize="@dimen/txt_l" />

            <TextView
                style="@style/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/IngresePassword"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/txt_m" />

            <EditText
                android:id="@+id/PassUser"
                style="@style/txt"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="@dimen/padding_xl"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textSize="@dimen/txt_l" />

            <Button
                android:id="@+id/BtnLogin"
                style="@style/btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/btn_style"
                android:text="@string/BtnIngresar" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>
